<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">



        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:background="@color/dark_blue"
            android:scaleType="centerCrop"/>
        <ImageView
            android:id="@+id/img_back"
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />



        <ImageView
            android:id="@+id/lyt_wave"
            android:layout_marginTop="@dimen/_200sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:src="@drawable/ic_wave"
            android:scaleType="fitXY"/>
        <LinearLayout
            android:layout_below="@id/lyt_wave"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@color/colorSecondary"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_minus10sdp"
            android:orientation="vertical">
            <ProgressBar
                android:id="@+id/progress_bar"
                style="@android:style/Widget.ProgressBar.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone"/>
            <LinearLayout
                android:id="@+id/lyt_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="25sp"/>

                <RatingBar
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="4.5"
                    android:stepSize="0.5"
                    android:progressTint="@color/yellow"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/tv_released"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="10 - 10 - 2020"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."/>
            </LinearLayout>

        </LinearLayout>

</RelativeLayout>