<resources>
    <string name="app_name">DummyMovieApp</string>
    <string name="movie">Movie</string>
    <string name="tvshow">TvShow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>